--- a/_config.yml
+++ b/_config.yml
@@ -44,26 +44,68 @@ defaults:
     image: true
 
   # Skills
-skills:
-  - Java
-  - C#
-  - Kotlin
-  - Python
-  - Lua
-  - Android
-  - Rust
-  - Typescript
-  - Verse
-  - Unity
-  - Unreal Engine
-  - LibGDX
-  - Godot
-  - Git
-  - UEFN
-  - Roblox
+  skills:
+    - C#
+    - Java
+    - Kotlin
+    - Python
+    - TypeScript
+    - Lua
+    - Rust
+    - Node.js
+    - Unity
+    - Unreal Engine (UE5)
+    - Roblox
+    - UEFN
+    - Godot
+    - LibGDX
+    - React
+    - React Native
+    - Git
+    - GitLab
+    - CI/CD
+    - Visual Studio
+    - IntelliJ
+    - Rider
+    - PlasticSCM
+    - Perforce
+
+# Professional Summary
+professional_summary: "Versatile software engineer with over 6 years of hands-on experience building interactive systems, scalable gameplay mechanics, and modular backend frameworks across diverse platforms. Adept in C#, Java, Lua, and TypeScript, with a strong command of system architecture, data flow, and collaborative agile development."
+
+# Key Strengths
+key_strengths:
+  - "Designed and implemented real-time, event-driven systems across game engines and web platforms"
+  - "Built scalable, modular gameplay and backend frameworks with a focus on reusability and performance"
+  - "Led cross-functional teams in agile environments, delivering production-ready features across the full SDLC"
+  - "Strong command of CI/CD, automated testing, version control workflows, and performance profiling"
+  - "Adaptable across platforms including Roblox, Unreal Engine, and browser-based 3D environments"
+
+# Professional Experience
+experience:
+  - company: "Rebased"
+    role: "Software Developer"
+    period: "Aug 2024 – Mar 2025"
+    description: "Developed core systems and scalable frameworks for Roblox including player data persistence, anti-cheat modules, camera cinematic manager, UI event pipelines, and logging systems. Set up and maintained project repositories on Perforce. Rigged, textured and animated game assets."
+  - company: "BasedAF"
+    role: "Software Developer"
+    period: "Mar 2023 – Jun 2024"
+    description: "Engineered modular gameplay features in UEFN such as dynamic currency systems, ranking logic, and user-facing shops. Created web-integrated 3D experiences on platforms like MONA and Spatial.io. Collaborated with creative director to design streaming overlays blending real-time data from APIs with responsive visuals."
+  - company: "Career Break"
+    role: "Family Care"
+    period: "Mar 2021 – Mar 2023"
+    description: "Took planned time off for family care responsibilities. Maintained technical proficiency through independent study and personal development projects."
+  - company: "Drakeling Labs"
+    role: "Lead Programmer / Project Manager / QA"
+    period: "Apr 2018 – Mar 2021"
+    description: "Led development of Iron Armada, designing systems for shared radar logic, modular assets, and distributed networking. Managed distributed dev team, ran agile standups, and ensured delivery of iterative builds. Conducted detailed QA and regression testing. Built Steam-integrated modding support and maintained GitLab CI pipelines."
 
 collections:
   projects:
+    output: true
+  professional_projects:
+    output: true
+  solo_projects:
     output: true
   games:
     output: true
